changes for nav bar and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,3 +14,11 @@
 <div class="container-fluid">
 	<router-outlet></router-outlet>
 </div>
+<footer class="page-footer font-small blue pt-4 mt-4">
+	<!-- Copyright -->
+    <div class="footer-copyright text-center py-3">
+    	&copy; All rights reserved for <i> Sports App </i> 2018
+    </div>
+    <!-- Copyright -->
+	
+</footer>
