--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-md bg-primary navbar-dark">
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
 	<a class="navbar-brand" href="#">SPORTS</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="collapsibleNavbar">
-		<ul class="nav navbar-nav navbar-right">
+		<ul class="nav navbar-nav ml-auto">
 			<li class="nav-item"><a class="nav-link" href="#" routerLink="/users">Users</a></li>
 			<li class="nav-item"><a class="nav-link" href="#" routerLink="/add">Add User</a></li>
 			<li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
