--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -15,6 +15,15 @@
     min-height: 38px;
     border-radius: 2px;
 }
+
+.form-container {
+	border:0px solid #0080ff;
+	padding:50px 60px;
+	margin-top:10vh;
+	-webkit-box-shadow: 1px 4px 27px 3px rgba(0,0,0,0.7);
+	-moz-box-shadow: 1px 4px 27px 3px rgba(0,0,0,0.7);
+	box-shadow: 1px 4px 27px 3px rgba(0,0,0,0.7);
+}
 .btn {        
     font-size: 15px;
     font-weight: bold;
