--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,23 @@
 <div class="row">
-  <div class="col-4 offset-4">
-    <h2 class="text-center">Login</h2>
-    <form>
+  <div class="col-sm-6 offset-sm-3">
+    <form class="form-container">
+    	<h2 class="text-center">Login</h2>
 		<div class="form-group">
         	<label for="userName">User Name:</label>
-        	<input type="text" class="form-control" id="userName" name="userName" [(ngModel)]="userName">
+        	<input type="text" placeholder="Username" class="form-control" id="userName" name="userName" [(ngModel)]="userName">
       	</div>
       	<div class="form-group">
         	<label for="pwd">Password:</label>
-        	<input type="password" class="form-control" id="pwd" name="passowrd" [(ngModel)]="password">
+        	<input type="password" placeholder="Password" class="form-control" id="pwd" name="passowrd" [(ngModel)]="password">
       	</div>
       	<div class="form-group">
       		<button class="btn btn-primary btn-block" (click)="login()">Login</button>
 		</div>
 		<div class="clearfix">
-            <label class="pull-left checkbox-inline">
+            <label class="float-left checkbox-inline">
             	<input type="checkbox"> Remember me
             </label>
-            <a href="#" class="pull-right">Forgot Password?</a>
+            <a href="#" class="float-right">Forgot Password?</a>
         </div>
     </form>
   </div>
