--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,25 +1,27 @@
-<div class="col-md-6">
-	<h2>User Details</h2>
-
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th class="hidden">Id</th>
-				<th>FirstName</th>
-				<th>LastName</th>
-				<th>Email</th>
-				<th>Action</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr *ngFor="let user of users">
-				<td class="hidden">{{ user.id}}</td>
-				<td>{{ user.firstName }}</td>
-				<td>{{ user.lastName }}</td>
-				<td>{{ user.email}}</td>
-				<td><button class="btn btn-danger" (click)="deleteUser(user)">
-						Delete User</button></td>
-			</tr>
-		</tbody>
-	</table>
+<div class="row">
+	<div class="col-sm-6 offset-sm-3">
+		<h2 class="text-center">User Details</h2>
+	
+		<table class="table table-striped table-responsive">
+			<thead>
+				<tr>
+					<th class="hidden">Id</th>
+					<th>FirstName</th>
+					<th>LastName</th>
+					<th>Email</th>
+					<th>Action</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr *ngFor="let user of users">
+					<td class="hidden">{{ user.id}}</td>
+					<td>{{ user.firstName }}</td>
+					<td>{{ user.lastName }}</td>
+					<td>{{ user.email}}</td>
+					<td><button class="btn btn-danger" (click)="deleteUser(user)">
+							Delete User</button></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </div>
