Added background to login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-	<a class="navbar-brand" href="#">SPORTS</a>
+	<a class="navbar-brand" href="#">SPORTS </a>
+	 
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -14,11 +15,15 @@
 <div class="container-fluid">
 	<router-outlet></router-outlet>
 </div>
-<footer class="page-footer font-small blue pt-4 mt-4">
+<footer class="footer">
+	
 	<!-- Copyright -->
-    <div class="footer-copyright text-center py-3">
-    	&copy; All rights reserved for <i> Sports App </i> 2018
+    <div class="container">
+		&copy; All rights reserved for <i> Sports App </i> 2018
     </div>
+    <div class="container">
+		<img src="../assets/images/SportsClub_4.png" alt="logo">
+	</div>
     <!-- Copyright -->
 	
 </footer>
