--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,4 +21,14 @@
 	
 }
 
-
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	/* Set the fixed height of the footer here */
+	height: 60px;
+	line-height: 60px; /* Vertically center the text there */
+	background-color: #0080ff;
+	color:#fff;
+	text-align: center;
+}
