--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -23,6 +23,9 @@
 	-webkit-box-shadow: 1px 4px 27px 3px rgba(0,0,0,0.7);
 	-moz-box-shadow: 1px 4px 27px 3px rgba(0,0,0,0.7);
 	box-shadow: 1px 4px 27px 3px rgba(0,0,0,0.7);
+	background: url(/assets/images/SportsClub_3.png) no-repeat center;
+	background-size: 100% 100%;
+	background-position: top center;
 }
 .btn {        
     font-size: 15px;
