Added alert component

--- a/src/app/user/add-user.component.html
+++ b/src/app/user/add-user.component.html
@@ -2,6 +2,7 @@
 	<div class="col-sm-6 offset-sm-3">
 		<h2 class="text-center">Add User</h2>
 		<form>
+			<alert></alert>
 			<div class="form-group">
 				<label for="email">Email address:</label> 
 				<input type="email"	[(ngModel)]="user.email" placeholder="Email" name="email"
