--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-sm-6 offset-sm-3">
 		<h2 class="text-center">User Details</h2>
-	
+		<alert></alert>
 		<table class="table table-striped table-responsive">
 			<thead>
 				<tr>
